feat: add solutions page

--- a/src/Pages/Home/components/Button/styles.css
+++ b/src/Pages/Home/components/Button/styles.css
@@ -9,7 +9,7 @@
   border: none;
   color: var(--branco);
   cursor: pointer;
-  font-size: 15px;
+  font-size: 0.9375rem;
   min-width: 138px;
   outline: none;
   overflow: hidden;
