feat/styles: add responsive design to solutions page + comunnity discord link

--- a/src/Pages/QuemSomos/styles.css
+++ b/src/Pages/QuemSomos/styles.css
@@ -33,6 +33,10 @@
 }
 
 @media screen and (max-width: 1600px) {
+  .about {
+    padding: 5rem 0;
+  }
+
   .about-container {
     padding: 0 10vw;
   }
