--- a/src/layout/Footer/styles.css
+++ b/src/layout/Footer/styles.css
@@ -1,19 +1,93 @@
 .footer {
+  align-items: center;
   background: var(--cinza-100);
+  display: flex;
   height: 7.5rem;
+  justify-content: space-between;
   padding: 0 20%;
   width: 100%;
   z-index: 10;
 }
 
+.footer__links {
+  align-items: center;
+  display: flex;
+  gap: 2rem;
+}
+
+.footer__link {
+  background: linear-gradient(to bottom, var(--cinza-200), rgba(242, 242, 242, 0.2));
+  background-origin: border-box;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+
+.link__logo {
+  fill: var(--cinza-600);
+  height: 2.5rem;
+  padding: 0.5rem;
+  transition: all 0.3s ease-in-out;
+  width: auto;
+}
+
+.link__logo:hover {
+  fill: var(--verde-500);
+}
+
+.sr-only {
+  position:absolute;
+  left:-10000px;
+  top:auto;
+  width:1px;
+  height:1px;
+  overflow:hidden;
+  }
+
+@media screen and (max-width: 1600px) {
+    .footer {
+      padding: 0 10vw;
+    }  
+  }
+  
+@media screen and (max-width: 1200px) {
+  .footer {
+    padding: 0 2rem;
+  }
+}
+  
+  
+@media screen and (max-width: 1000px) {
+  .footer {
+     padding: 1rem;
+  }
+}
+
 .dark {
   .footer {
     background-color: #18181b;
+    color: var(--branco);
+  }
+
+  .footer__link {
+    background: linear-gradient(to bottom, var(--cinza-800), rgba(27, 27, 27, 0.2));
   }
 }
 
 .bear {
   .footer {
     background-color: #000;
+    color: var(--verde-500);
+  }
+
+  .footer__link {
+    background: linear-gradient(to bottom, var(--cinza-800), rgba(27, 27, 27, 0.2));
+  }
+
+  .link__logo {
+    fill: var(--verde-500);
+  }
+
+  .link__logo:hover {
+    fill: var(--verde-300);
   }
 }
