feat: added theme guided tour component

--- a/src/layout/Header/styles.css
+++ b/src/layout/Header/styles.css
@@ -32,6 +32,8 @@
 
 @media screen and (max-width: 1200px) {
   .header {
+    justify-content: flex-start;
+    gap: 2rem;
     padding: 0 2rem;
   }
 }
