--- a/src/layout/Navbar/styles.css
+++ b/src/layout/Navbar/styles.css
@@ -55,6 +55,18 @@
   transform: rotate(45deg);
 }
 
+@media screen and (max-width: 1200px) {
+  .menu-list__item {
+    padding: 0 1.5rem;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .menu-list__item {
+    padding: 0 1.25rem;
+  }
+}
+
 @media screen and (max-width: 1000px) {
   .menu-list {
     flex-direction: column;
