--- a/src/Pages/Carreiras/components/RecruitmentForm/styles.css
+++ b/src/Pages/Carreiras/components/RecruitmentForm/styles.css
@@ -16,6 +16,7 @@
   display: flex;
   font-size: 1.25rem;
   margin-bottom: 0.5rem;
+  text-align: justify;
 }
 
 .recruitment-form__field-label span::first-letter{
@@ -38,7 +39,7 @@
 .recruitment-form__field-textarea {
   height: 12.5vh;
   max-height: 100%;
-  resize: none;
+  resize: vertical;
 }
 
 .recruitment-form__field-input:focus,
